correction lien swipez pour real + overflow y bg

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ header {
   z-index: 0;
   width: 100%;
   height: 100%;
+  overflow-y: hidden;
   /* filter: blur(20px); */
 }
 
@@ -420,6 +421,9 @@ footer {
   transition: transform 0.5s ease;
 }
 @media only screen and (max-width:1000px) {
+  header .header-footer .call-to-scroll a {
+    margin-left: 0;
+  }
   main .project-vue .project-info {
   left: 0;
   right: 0;
